@@ -1,6 +1,10 @@
 CHANGELOG RoundCube Webmail
 ---------------------------
 
+2008/10/29 (alec)
+----------
+- Fix problem with numeric folder names (#1485527)
+
 2008/10/27 (alec)
 ----------
 - Fix unread message unintentionally marked as read if read_when_deleted=true (#1485409)
